--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <li class="icon fa-code">ethers.js</li>
             <li class="icon fa-code">React.js</li>
             <li class="icon fa-code">JavaScript</li>
+			<li class="icon fa-code">Hardhat</li>
           </ul>
         </div>
       </section>
