--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </header>
         <div class="content">
 			<div style="margin-bottom: 2em;">
-				<h3 style="margin-bottom: 10px;">Education:- </h3>
+				<h2 style="margin-bottom: 10px;">Education:- </h2>
 				<div class="edu">
 					  <h4>Indira Gandhi National Open University</h4>
 					  <p><strong>BCA (Bachelors's in Computer Application)</strong></p>
@@ -89,10 +89,10 @@
 				</div>
 			</div>
 			<div>
-				<h3 style="margin-bottom: 10px;">Certificates:-</h3>
+				<h2 style="margin-bottom: 10px;">Certificates:-</h2>
 				<div class="edu">
 					  <h4>Certified Blockchain Developer</h4>
-					  <p><strong>Issuer : </strong>Blockchain Council</p>
+					  <p><strong>Issued By : </strong>Blockchain Council</p>
 					  <p><strong>Issued : </strong>May 2022</p>
 					  <p><strong>Credential ID : </strong> 51492780</p>
 					  <a href="https://www.credential.net/8d88028d-f0ec-477b-bdec-316eca7c3e43" target="_blank">Show Certificate</a>
@@ -152,7 +152,7 @@
         </header>
         <div class="content">
           <p>
-            <strong>Get in touch</strong> with me. Mail me or Dm me on discord or telegram
+            <strong>Get in touch</strong>. eMail me or DM me on discord or telegram
           </p>
         </div>
         <footer>
