--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
         </header>
         <div class="content">
           <p>
-            I'm Mohit Chandel, a tech enthusiast who is interested in computer
-            programming and blockchain technologies. I currently work as a
+            I'm Mohit Chandel, a Certified Blockchain developer and tech enthusiast who is interested in computer programming and blockchain technologies. I currently work as a
             Blockchain developer, writing code to create decentralised
             applications. I have worked as a DApp developer for a few IT
             companies, and this experience has given me some outstanding and
             technical skills.
           </p>
+		  <img style="width: 120px;" src="https://api.accredible.com/v1/frontend/credential_website_embed_image/badge/51492780">
           <!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
         </div>
       </section>
