--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         </header>
         <div class="content">
           <p>
-            I'm Mohit Chandel, a Certified Blockchain developer and tech enthusiast who is interested in computer programming and blockchain technologies. I currently work as a
-            Blockchain developer, writing code to create decentralised
+            I'm Mohit Chandel, a certified blockchain developer and tech enthusiast who is interested in computer programming and blockchain technologies. I currently work as a
+            Blockchain developer, writing code to create decentralized
             applications. I have worked as a DApp developer for a few IT
             companies, and this experience has given me some outstanding and
             technical skills.
@@ -94,7 +94,7 @@
 					  <h4>Certified Blockchain Developer</h4>
 					  <p><strong>Issued By : </strong>Blockchain Council</p>
 					  <p><strong>Issued : </strong>May 2022</p>
-					  <p><strong>Credential ID : </strong> 51492780</p>
+					  <p><strong>Certificate ID : </strong> 51492780</p>
 					  <a href="https://www.credential.net/8d88028d-f0ec-477b-bdec-316eca7c3e43" target="_blank">Show Certificate</a>
 				</div>
 			</div>
