Pending changes exported from your codespace

--- a/index.html
+++ b/index.html
@@ -109,10 +109,17 @@
         <div class="content">
 			<div>
 				<ul class="exp">
+          <li>
+						<h4>Blockchain Developer</h4>
+						<p><strong>Kleoverse · Full-time</strong></p>
+						<p style="color: #777575;">Nov 2022 - Present</p>
+						<p style="color: #a0a0a0;">Remote</p>
+						<p><strong>Skills</strong>: Solidity · TypeScript · Hardhat · Ethereum</p>
+					</li>
 					<li>
 						<h4>Blockchain Developer</h4>
 						<p><strong>SoluLab · Full-time</strong></p>
-						<p style="color: #777575;">Feb 2022 - Present</p>
+						<p style="color: #777575;">Feb 2022 - Nov 2022</p>
 						<p style="color: #a0a0a0;">Remote</p>
 						<p><strong>Skills</strong>: Solidity · Ethereum · Hardhat · ethers.js · web3.js</p>
 					</li>
