--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
             </div>
           </div>
           <p>
-            I am a tech geek passionate about computer programming and technologies like Blockchain and have over a year of blockchain development experience. I am currently working as a blockchain developer and I maintain and create unique products to help people achieve more in their businesses with Web3 technology and blockchain technology! I am passionate about building trusted and loved products that help people enter the decentralized world of Web3.
-            If you catch me over time, I'm a football fan!</p>
+            Hey there! I'm a total tech geek who's absolutely obsessed with computer programming and all things tech-related. One area that really gets me excited is Blockchain technology. I've been working in this field since 2021, and let me tell you, it's been an incredible journey!
+
+Currently, I'm fortunate enough to work as a blockchain developer, where I get to bring my passion to life. My main focus is on creating and maintaining unique products that empower individuals and businesses to thrive using Web3 technology and blockchain magic! I take immense joy in building products that people trust and love, helping them navigate the amazing world of decentralization and Web3.</p>
         </div>
       </div>
 
